--- a/Droidcon-Bucharest-2012/index.html
+++ b/Droidcon-Bucharest-2012/index.html
@@ -33,309 +33,236 @@
 		<div class="reveal">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
+            <div class="slides">
+            <section>
+                <h1>creating android apps using html5 with phonegap</h1>
+                <p>
+                    <br>
+                </p>
+                <p>
+                    <br>
+                </p>
+                <p>Daniel Popescu | Computer Scientist | Adobe</p>
+            </section>
+            <section>
+                <h3>
+        <span style="font-size:32.0pt;font-family:&quot;Adobe Clean&quot;;
+mso-ascii-font-family:&quot;Adobe Clean&quot;;mso-fareast-font-family:+mj-ea;mso-bidi-font-family:
++mj-cs;mso-ascii-theme-font:major-latin;mso-fareast-theme-font:major-fareast;
+mso-bidi-theme-font:major-bidi;color:#DADDE0;mso-color-index:2;mso-font-kerning:
+12.0pt;language:en-US;mso-style-textfill-type:solid;mso-style-textfill-fill-themecolor:
+background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
+100.0%">Mobile Development</span>&nbsp;</h3>
+                <div>
+                    <br>
+                </div>
+                <h2>Native Apps</h2>
+                <h2>
+                    <br>Web Apps</h2>
+                <h2>
+                    <br>Hybrid Apps (eg. PhoneGap)</h2>
+            </section>
+            <section>
+                <p>Why would you use PhoneGap?</p>
+                <p>
+                    <br>
+                </p>
+                <p>
+                </p>
+                <ul>
+                    <li>Write once, run everywhere</li>
+                    <li>Native Installers -&gt; Application Stores</li>
+                    <li>Use standard web technologies</li>
+                </ul>
+                <div style="text-align: left;">
+                    <br>
+                </div>
+                <div style="text-align: center;">
+                    <img src="http://i.imgur.com/hUsCy.png" width="500px" height="400px">
+                    <br>
+                </div>
+                <p>
+                </p>
 
-				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
-					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
-					</p>
-				</section>
 
-				<section>
-					<h2>Heads Up</h2>
-					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
 
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
-				</section>
 
-				<!-- Example of nested vertical slides -->
-				<section>
-					<section>
-						<h2>Vertical Slides</h2>
-						<p>
-							Slides can be nested inside of other slides,
-							try pressing <a href="#/2/1">down</a>.
-						</p>
-						<a href="#/2/1" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Press down or up to navigate.</p>
-					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>Cornify</p>
-						<a class="test" href="http://cornify.com">
-							<img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 3</h2>
-						<p>That's it, time to go back up.</p>
-						<a href="#/2" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-						</a>
-					</section>
-				</section>
 
-				<section>
-					<h2>Point of View</h2>
-					<p>
-						Press <strong>ESC</strong> to enter the slide overview. Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.
-					</p>
-				</section>
 
-				<section>
-					<h2>rvl.io</h2>
-					<p>
-						If you don't like writing slides in HTML you can use the online editor <a href="http://www.rvl.io" target="_blank">rvl.io</a>.
-					</p>
-				</section>
+            </section>
+            <section>
+                <h3>PhoneGap could be your best friend if</h3>
+                <p>
+                    <br>
+                </p>
+                <p>
+                    <br>
+                </p>
+                <p>
+                <ul>
+                    <li>You want to target multiple mobile platforms</li>
+                    <li>You know HTML/JavaScript/CSS</li>
+                    <li>Extend existing in-browser apps with native features</li>
+                    <li>Data-centric apps, social networking, simple games</li>
+                </ul>
+                </p>
+            </section>
+            <section>
+                <section>
+                    <h2>
+                        <br>
+                    </h2>
+                    <h2>
+                        <br>
+                    </h2>
+                    <h2>
+                        <br>
+                    </h2>
+                    <h2>PHONEGAP &nbsp; &nbsp;vs &nbsp; &nbsp;Apache Cordova<br>
+                    </h2>
+                </section>
+                <section>
+                    <h2>Contributors</h2>
+                    <div>
+                        <br>
+                    </div>
+                    <h3>Adobe</h3>
+                    <h3>
+                        <br>Microsoft</h3>
+                    <h3>
+                        <br>RIM</h3>
+                    <h3>
+                        <br>IBM</h3>
+                </section>
+            </section>
+            <section>
+                <h2>PhoneGap support</h2>
+                <div>
+                    <br>
+                </div>
+                <div>
+                    <img src="http://i.imgur.com/agnLA.jpg" width="870px">
+                    <br>
+                </div>
 
-				<section>
-					<h2>Works in Mobile Safari</h2>
-					<p>
-						Try it out! You can swipe through the slides and pinch your way to the overview.
-					</p>
-				</section>
 
-				<section>
-					<h2>Marvelous Unordered List</h2>
-					<ul>
-						<li>No order here</li>
-						<li>Or here</li>
-						<li>Or here</li>
-						<li>Or here</li>
-					</ul>
-				</section>
+            </section>
+            <section>
+                <h2>PhoneGap Plug-ins</h2>
+                <div>
+                    <br>
+                </div>
+                <div style="text-align: left;">
+                    <ul>
+                        <li>Extend the buit-in functionality with custom plug-ins</li>
+                        <li>Delegate heavyweight data processiong to native code</li>
+                        <li>Create background services</li>
+                    </ul>
+                    <div>
+                        <br>
+                    </div>
+                    <div style="text-align: center;">
+                        <img src="http://i.imgur.com/0iFRa.png" weight="400px" height="400px">
+                        <br>
+                    </div>
+                    <div style="text-align: center;">
+                        <br>
+                    </div>
+                </div>
 
-				<section>
-					<h2>Fantastic Ordered List</h2>
-					<ol>
-						<li>One is smaller than...</li>
-						<li>Two is smaller than...</li>
-						<li>Three!</li>
-					</ol>
-				</section>
 
-				<section data-markdown>
-					<script type="text/template">
-						## Markdown support
+            </section>
+            <section>
+                <h1>
+                    <br>
+                </h1>
+                <h1>DEMO<br>
+                </h1>
+            </section>
+            <section>
+                <h1>
+                    <br>
+                </h1>
+                <h1>Building PhoneGap Apps</h1>
+            </section>
+            <section>
+                <h2>What can you use to build your app?</h2>
+                <div>
+                    <br>
+                </div>
+                <div>
+                    <br>
+                </div>
+                <div>
+                    <img src="http://i.imgur.com/8vu9J.png" width="870px">
+                    <br>
+                </div>
+            </section>
+            <section>
+                <h2>Build PhoneGap app as you'd build a regular web app</h2>
+                <div>
+                    <br>
+                </div>
+                <div>
+                    <br>
+                </div>
+                <div>
+                    <img src="http://i.imgur.com/bDYOu.png" width="870px">
+                    <br>
+                </div>
+            </section>
+            <section>
+                <h2>Creating the native installers</h2>
+                <div>
+                    <br>
+                </div>
+                <div style="text-align: left;">
+                    <ol>
+                        <li style="text-align: left;">Using the target platform tool chain</li>
+                        <li style="text-align: left;">Using PhoneGap Build - a cloud service</li>
+                    </ol>
+                    <div>
+                        <br>
+                    </div>
+                    <div>
+                        <br>
+                    </div>
+                    <div style="text-align: center;">
+                        <img src="http://i.imgur.com/c3rr5.png" width="870px">
+                        <br>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h2>PhoneGap Build</h2>
+                <div>(http://build.phonegap.com)</div>
+                <div>
+                    <br>
+                </div>
+                <div style="text-align: left;">
+                    <ul>
+                        <li>Supports: IOS, Android, BlackBerry, WebOS, Windows Phone and Symbian</li>
+                        <li>It is free and it will always be free for Open Source projects</li>
+                        <li>You can either upload your files or provide a Git/SVN repository</li>
+                    </ul>
+                    <div style="text-align: right;">
+                        <img src="http://i.imgur.com/d3yHG.png" width="200px" height="200px">&nbsp;<br>
+                    </div>
+                </div>
 
-						For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-
-							<section data-markdown>
-							  ## Markdown support
-
-							  For those of you who like that sort of thing.
-							  Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-							</section>
-					</script>
-				</section>
-
-				<section id="transitions">
-					<h2>Transition Styles</h2>
-					<p>
-						You can select from different transitions, like: <br>
-						<a href="?transition=cube#/transitions">Cube</a> -
-						<a href="?transition=page#/transitions">Page</a> -
-						<a href="?transition=concave#/transitions">Concave</a> -
-						<a href="?transition=zoom#/transitions">Zoom</a> -
-						<a href="?transition=linear#/transitions">Linear</a> -
-						<a href="?transition=none#/transitions">None</a> -
-						<a href="?#/transitions">Default</a>
-					</p>
-				</section>
-
-				<section id="themes">
-					<h2>Themes</h2>
-					<p>
-						Reveal.js comes with a few themes built in: <br>
-						<a href="?theme=sky#/themes">Sky</a> -
-						<a href="?theme=beige#/themes">Beige</a> -
-						<a href="?theme=simple#/themes">Simple</a> -
-						<a href="?theme=serif#/themes">Serif</a> -
-						<a href="?#/themes">Default</a>
-					</p>
-					<p>
-						<small>
-							* Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.
-						</small>
-					</p>
-				</section>
-
-				<section>
-					<section data-state="alert">
-						<h2>Global State</h2>
-						<p>
-							Set <code>data-state="something"</code> on a slide and <code>"something"</code>
-							will be added as a class to the document element when the slide is open. This lets you
-							apply broader style changes, like switching the background.
-						</p>
-						<a href="#/7/1" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section data-state="blackout">
-						<h2>"blackout"</h2>
-						<a href="#/7/2" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section data-state="soothe">
-						<h2>"soothe"</h2>
-						<a href="#/7/0" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-						</a>
-					</section>
-				</section>
-
-				<section data-state="customevent">
-					<h2>Custom Events</h2>
-					<p>
-						Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-					</p>
-					<pre><code contenteditable style="font-size: 18px; margin-top: 20px;">Reveal.addEventListener( 'customevent', function() {
-	console.log( '"customevent" has fired' );
-} );
-					</code></pre>
-				</section>
-
-				<section>
-					<h2>Clever Quotes</h2>
-					<p>
-						These guys come in two forms, inline: <q cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						The nice thing about standards is that there are so many to choose from</q> and block:
-					</p>
-					<blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-						reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.
-					</blockquote>
-				</section>
-
-				<section>
-					<h2>Pretty Code</h2>
-					<pre><code contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) ) {
-        node.className += ' roll';
-      }
-    };
-  }
-}
-					</code></pre>
-					<p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
-				</section>
-
-				<section>
-					<h2>Intergalactic Interconnections</h2>
-					<p>
-						You can link between slides internally,
-						<a href="#/2/3">like this</a>.
-					</p>
-				</section>
-
-				<section>
-					<section>
-						<h2>Fragmented Views</h2>
-						<p>Hit the next arrow...</p>
-						<p class="fragment">... to step through ...</p>
-						<ol>
-							<li class="fragment"><code>any type</code></li>
-							<li class="fragment"><em>of view</em></li>
-							<li class="fragment"><strong>fragments</strong></li>
-						</ol>
-
-						<aside class="notes">
-							This slide has fragments which are also stepped through in the notes window.
-						</aside>
-					</section>
-					<section>
-						<h2>Fragment Styles</h2>
-						<p>There's a few styles of fragments, like:</p>
-						<p class="fragment grow">grow</p>
-						<p class="fragment shrink">shrink</p>
-						<p class="fragment roll-in">roll-in</p>
-						<p class="fragment fade-out">fade-out</p>
-						<p class="fragment highlight-red">highlight-red</p>
-						<p class="fragment highlight-green">highlight-green</p>
-						<p class="fragment highlight-blue">highlight-blue</p>
-					</section>
-				</section>
-
-				<section>
-					<h2>Spectacular image!</h2>
-					<a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-						<img width="320" height="299" src="http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png" alt="Meny">
-					</a>
-				</section>
-
-				<section>
-					<h2>Export to PDF</h2>
-					<p>Presentations can be <a href="https://github.com/hakimel/reveal.js#pdf-export">exported to PDF</a>, below is an example that's been uploaded to SlideShare.</p>
-					<iframe id="slideshare" src="http://www.slideshare.net/slideshow/embed_code/13872948" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe>
-					<script>
-						document.getElementById('slideshare').attributeName = 'allowfullscreen';
-					</script>
-				</section>
-
-				<section>
-					<h2>Take a Moment</h2>
-					<p>
-						Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take disctracting slides off the screen
-						during a presentation.
-					</p>
-				</section>
-
-				<section>
-					<h2>Stellar Links</h2>
-					<ul>
-						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-						<li><a href="http://hakim.se/projects/reveal-js">Leave feedback on my site</a></li>
-						<li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
-					</ul>
-				</section>
-
-				<section>
-					<h2>It's free</h2>
-					<p>
-						reveal.js and <a href="http://www.rvl.io">rvl.io</a> are entirely free but if you'd like to support the projects you can donate below.
-						Donations will go towards hosting and domain costs.
-					</p>
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-						<input type="hidden" name="cmd" value="_donations">
-						<input type="hidden" name="business" value="hakim.elhattab@gmail.com">
-						<input type="hidden" name="lc" value="US">
-						<input type="hidden" name="item_name" value="reveal.js / rvl.io">
-						<input type="hidden" name="no_note" value="0">
-						<input type="hidden" name="currency_code" value="USD">
-						<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
-						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-					</form>
-				</section>
-
-				<section>
-					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
-				</section>
-
-			</div>
+            </section>
+            <section>
+                <h2>PhoneGap Emulate</h2>
+                <div>(http://emulate.phonegap.com)</div>
+                <div>
+                    <br>
+                </div>
+                <div>
+                    <img src="http://i.imgur.com/XdLe2.png">
+                    <br>
+                </div>
+            </section>
+            </div>
 
 		</div>
 
@@ -352,7 +279,7 @@ function linkify( selector ) {
 				history: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/none
+				transition: Reveal.getQueryHash().transition || 'concave', // default/cube/page/concave/zoom/linear/none
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
