--- a/Droidcon-Bucharest-2012/index.html
+++ b/Droidcon-Bucharest-2012/index.html
@@ -78,7 +78,7 @@ background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
                     <br>
                 </div>
                 <div style="text-align: center;">
-                    <img src="http://i.imgur.com/hUsCy.png" width="500px" height="400px">
+                    <img src="img/1.png" width="500px" height="400px">
                     <br>
                 </div>
                 <p>
@@ -141,7 +141,7 @@ background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
                     <br>
                 </div>
                 <div>
-                    <img src="http://i.imgur.com/agnLA.jpg" width="870px">
+                    <img src="img/2.png" width="870px">
                     <br>
                 </div>
 
@@ -162,7 +162,7 @@ background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
                         <br>
                     </div>
                     <div style="text-align: center;">
-                        <img src="http://i.imgur.com/0iFRa.png" weight="400px" height="400px">
+                        <img src="img/3.png" weight="400px" height="400px">
                         <br>
                     </div>
                     <div style="text-align: center;">
@@ -194,7 +194,7 @@ background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
                     <br>
                 </div>
                 <div>
-                    <img src="http://i.imgur.com/8vu9J.png" width="870px">
+                    <img src="img/4.png" width="870px">
                     <br>
                 </div>
             </section>
@@ -207,7 +207,7 @@ background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
                     <br>
                 </div>
                 <div>
-                    <img src="http://i.imgur.com/bDYOu.png" width="870px">
+                    <img src="img/5.png" width="870px">
                     <br>
                 </div>
             </section>
@@ -228,7 +228,7 @@ background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
                         <br>
                     </div>
                     <div style="text-align: center;">
-                        <img src="http://i.imgur.com/c3rr5.png" width="870px">
+                        <img src="img/6.png" width="870px">
                         <br>
                     </div>
                 </div>
@@ -246,7 +246,7 @@ background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
                         <li>You can either upload your files or provide a Git/SVN repository</li>
                     </ul>
                     <div style="text-align: right;">
-                        <img src="http://i.imgur.com/d3yHG.png" width="200px" height="200px">&nbsp;<br>
+                        <img src="img/7.png" width="200px" height="200px">&nbsp;<br>
                     </div>
                 </div>
 
@@ -258,7 +258,7 @@ background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
                     <br>
                 </div>
                 <div>
-                    <img src="http://i.imgur.com/XdLe2.png">
+                    <img src="img/8.png">
                     <br>
                 </div>
             </section>
