--- a/Droidcon-Bucharest-2012/index.html
+++ b/Droidcon-Bucharest-2012/index.html
@@ -266,6 +266,8 @@ background2;mso-style-textfill-fill-color:#DADDE0;mso-style-textfill-fill-alpha:
 
 		</div>
 
+        <div id="logo"><img src="img/adobe.png" alt="Adobe" style="position: fixed;top:0;right:50px;"></div>
+
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.min.js"></script>
 
